# vesuvio

./: .gitignore  CMakeLists.txt  vesuvio.sln
sample_app/: Application.cpp  Application.hpp  sample_app.vcxproj.filters
sample_app/Debug/: vc142.idb
sample_app/Debug/sample_app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  sample_app.lastbuildstate
sample_app/assets/: .gitignore
sample_app/x64/Debug/: sample_app.exe.recipe  vc142.idb
sample_app/x64/Debug/sample_app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
sample_app/x64/Release/: sample_app.exe.recipe
sample_app/x64/Release/sample_app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sample_app.write.1u.tlog
vesuvio/: CMakeLists.txt  vesuvio.vcxproj
vesuvio/core/: CoreDefinitions.hpp  core.vcxproj  core.vcxproj.filters
vesuvio/core/x64/Debug/core.tlog/: core.lastbuildstate
vesuvio/gfx/: CMakeLists.txt  GfxContext.hpp  GfxContextNone.hpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  RenderPass.hpp  Texture.hpp  Vertex.hpp  VertexBuffer.hpp  VulkanContext.cpp  VulkanContext.hpp  gfx.vcxproj  gfx.vcxproj.filters
vesuvio/gfx/x64/Debug/: gfx.idb  gfx.vcxproj.FileListAbsolute.txt
vesuvio/gfx/x64/Debug/gfx.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
vesuvio/gfx/x64/Release/gfx.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  gfx.lastbuildstate
vesuvio/runtime/: CMakeLists.txt  Runtime.cpp  Runtime.hpp  runtime.vcxproj  runtime.vcxproj.filters
vesuvio/runtime/x64/Debug/: runtime.idb  runtime.vcxproj.FileListAbsolute.txt
vesuvio/runtime/x64/Debug/runtime.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
vesuvio/runtime/x64/Release/runtime.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
vesuvio/sample_app/: Application.cpp  Application.hpp  CMakeLists.txt  sample_app.cpp  sample_app.vcxproj
vesuvio/sample_app/assets/shaders/: compile_shaders.bat  compile_shaders.sh
vesuvio/src/: Application.cpp  Application.hpp  Mesh.hpp  Vertex.hpp  VulkanContext.cpp  VulkanContext.hpp  vesuvio.cpp
x64/Debug/: runtime.lib
x64/Release/: sample_app.ipdb
